# CPFCP

catkin_ws_relay/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws_relay/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws_relay/devel/include/turtlebot_stage/: agentState.h  roleSwitch.h  wayPoint.h
catkin_ws_relay/devel/lib/pkgconfig/: turtlebot_stage.pc
catkin_ws_relay/devel/lib/python2.7/dist-packages/turtlebot_stage/msg/: __init__.py  _agentState.py  _roleSwitch.py  _wayPoint.py
catkin_ws_relay/devel/lib/turtlebot_stage/: boid0  boid1  boid2  talker_follower  talker_leader
catkin_ws_relay/devel/share/common-lisp/ros/turtlebot_stage/msg/: _package.lisp  _package_agentState.lisp  _package_roleSwitch.lisp  _package_wayPoint.lisp  agentState.lisp  roleSwitch.lisp  turtlebot_stage-msg.asd  wayPoint.lisp
catkin_ws_relay/devel/share/turtlebot_stage/cmake/: turtlebot_stage-msg-paths.cmake  turtlebot_stageConfig.cmake
catkin_ws_relay/src/turtlebot_stage/: CMakeLists.txt  package.xml
catkin_ws_relay/src/turtlebot_stage/launch/: turtlebot_in_stage.launch  turtlebot_in_stage_line.launch
catkin_ws_relay/src/turtlebot_stage/maps/stage/: maze.world  maze_ten_turt.world  turtlebot.inc
catkin_ws_relay/src/turtlebot_stage/msg/: agentState.msg  roleSwitch.msg
catkin_ws_relay/src/turtlebot_stage/src/: talker_leader_circle.cpp  talker_leader_line.cpp  talker_leader_role.cpp
